Integrated JMH into build

--- a/nofib.cabal
+++ b/nofib.cabal
@@ -13,6 +13,7 @@ executable nofib-runner
                      , directory
                      , time
                      , process
+                     , containers
   hs-source-dirs:      shake
   default-language:    Haskell2010
   ghc-options:         -O2
