--- a/real/hidden/Makefile
+++ b/real/hidden/Makefile
@@ -3,6 +3,6 @@ include $(TOP)/mk/boilerplate.mk
 
 SRC_RUNTEST_OPTS += +RTS -K1m -RTS
 PROG_ARGS = objects/four.plate
+SRC_HC_OPTS += -package array
 
 include $(TOP)/mk/target.mk
-
